--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.26",
+    "boxicons": "^2.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
