--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.1",
     "axios": "^1.3.4",
     "boxicons": "^2.1.4",
     "react": "^18.2.0",
