--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-scripts": "^5.0.1",
-    "rollup": "^3.18.0"
+    "rollup": "^3.18.0",
+    "styled-components": "^5.3.8"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
